--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Кэт энерджи</title>
-    <link href="source/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
@@ -15,13 +15,13 @@
       </div>
       <nav class="page-header__nav main-nav">
         <ul class="main-nav__list ">
-          <li class="main-nav__item ">
+          <li class="main-nav__item main-nav__item--catalog">
             <a href="index.html">Главная</a>
           </li>
-          <li class="main-nav__item main-nav__item--active">
+          <li class="main-nav__item main-nav__item--active main-nav__item--catalog">
             <a>Каталог продукции</a>
           </li>
-          <li class="main-nav__item">
+          <li class="main-nav__item main-nav__item--catalog">
             <a href="form.html">Подбор программы</a>
           </li>
         </ul>
