--- a/source/index.html
+++ b/source/index.html
@@ -2,11 +2,134 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
+    <title>Кэт энерджи</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
-
+    <header class="page-header">
+      <div class="page-header__wrapper">
+        <img src="http://placehold.it/50x30" alt="Логотип Cat Energy">
+        <a class="page-header__logo" href="#"><img src="http://placehold.it/50x30" alt="Логотип Cat Energy"></a>
+        <input id="menu_sw" type="checkbox" checked>
+        <label for="menu_sw">Открыть меню</label>
+      </div>
+      <nav class="page-header__nav main-nav">
+        <ul class="main-nav__list ">
+          <li class="main-nav__item main-nav__item--active">
+            <a>Главная</a>
+          </li>
+          <li class="main-nav__item ">
+            <a href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <section class="promo">
+      <div class="promo__wrapper">
+        <h2 class="promo__caption">Функциональное питание для котов</h2>
+        <p class="promo__slogan">Занялся собой? Займись котом!</p>
+        <a class="promo__button button" href="#">Подобрать Программу</a>
+      </div>
+    </section>
+    <main class="page-main">
+      <h1 class="visually-hidden">Магазин питания для котов Cat energy</h1>
+      <section class="targets">
+        <div class="targets__item">
+          <h3 class="targets__title targets__title--slim">Похудение</h3>
+          <p class="targets__description">
+            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить ЛИШНИЙ ВЕС.
+          </p>
+          <a class="targets__button" href="#">Каталог Slim</a>
+        </div>
+        <div class="targets__item">
+          <h3 class="targets__title targets__title--mass">Набор массы</h3>
+          <p class="targets__description">
+            Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+          </p>
+          <a class="targets__button" href="#">Каталог Pro</a>
+        </div>
+      </section>
+      <section class="product-description">
+        <h2 class="product-description__caption">Как это работает</h2>
+        <ul class="product-description__list">
+          <li class="product-description__item product-description__item--nutrition">
+            Функциональное питание содержит только полезные питательные вещества.
+          </li>
+          <li class="product-description__item product-description__item--powder">
+            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+          </li>
+          <li class="product-description__item product-description__item--change">
+            Замените один-два приема обычной еды на наше функциональное питание.
+          </li>
+          <li class="product-description__item product-description__item--month">
+            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          </li>
+        </ul>
+      </section>
+    </main>
+    <section class="example">
+      <div class="example__caption-wrap">
+        <h2 class="example__caption">Живой пример</h2>
+      </div>
+      <div class="example__wrapper">
+        <div class="example__text-wrap">
+          <p class="example__description">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+          </p>
+          <div class="example__list-wrapper">
+            <div class="example__result">
+              <span class="example__number">5 кг</span>
+              <span class="example__text">снижение веса</span>
+            </div>
+            <div class="example__result">
+              <span class="example__number">60 дней</span>
+              <span class="example__text">затрачено времени</span>
+            </div>
+            <h4 class="example__money-spent">затраты на питание: 15 000 руб.</h4>
+          </div>
+        </div>
+        <div class="example__cat-wrap">
+          <input type="checkbox" class="visually-hidden example_switch">
+          <div class="example__before">
+            <img src="../530049-cat-energy/source/img/before-mobile@1x.png" alt="Было">
+          </div>
+          <div class="example__after">
+            <img src="../530049-cat-energy/source/img/after-mobile@1x.png" alt="Стало">
+          </div>
+          <label for="example_switch" class="example__toggles">было</label>
+          <label for="example_switch">*</label>
+          <label for="example_switch" class="example__toggles">стало</label>
+        </div>
+      </div>
+    </section>
+    <footer class="page-footer">
+      <section class="partnership">
+        <div class="partnership__wrapper">
+          <h3 class="partnership__invite"> приглашаем к сотрудничеству дилеров!</h3>
+          <p class="partnership__address">
+            ул. Большая Конюшенная, д.19/8 Санкт-Петербург
+          </p>
+        </div>
+      </section>
+      <div class="map-wrapper">map
+      </div>
+      <div class="page-footer__wrapper">
+        <a class="page-footer__logo" href="#"><img src="http://placehold.it/50x30" alt="Логотип Cat Energy"></a>
+        <div class="page-footer__social social">
+          <a class="social__link social__link--vkontakte" href="#">vkontante</a>
+          <a class="social__link social__link--instagram" href="#">instagram</a>
+          <a class="social__link social__link--facebook" href="#">facebook</a>
+        </div>
+        <div class="page-footer__developers developers">
+          <a class="developers__item developers__item--text" href="#">HTML Academy</a>
+          <a class="developers__item developers__item--pic" href="#">Логотип HTML Academy</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
+COPY TO CLIPBOARD	 SELECT ALL
+© FreeFormatter.com - FREEFORMATTER is
