почти index tablet

--- a/source/index.html
+++ b/source/index.html
@@ -84,11 +84,11 @@
             Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
           </p>
           <div class="example__list-wrapper">
-            <div class="example__result">
+            <div class="example__result example__result--mass">
               <span class="example__number">5 кг</span>
               <span class="example__text">снижение веса</span>
             </div>
-            <div class="example__result">
+            <div class="example__result example__result--days">
               <span class="example__number">60 дней</span>
               <span class="example__text">затрачено времени</span>
             </div>
@@ -99,14 +99,12 @@
           <div class="example__center-cat-wrapper">
             <input type="checkbox" id="example_switch" class="visually-hidden example_switch">
             <div class="example__before">
-              <img src="img/before-mobile@1x.png" alt="Было">
             </div>
             <div class="example__after">
-              <img src="img/after-mobile@1x.png" alt="Стало">
             </div>
             <div class="example__slider-wrapper">
               <label for="example_switch" class="example__toggles">было</label>
-              <label class="example__slider-bar" for="example_switch"></label>
+              <label class="example__slider-bar" for="example_switch"><small></small></label>
               <label for="example_switch" class="example__toggles">стало</label>
             </div>
           </div>
