--- a/source/index.html
+++ b/source/index.html
@@ -92,7 +92,7 @@
               <span class="example__number">60 дней</span>
               <span class="example__text">затрачено времени</span>
             </div>
-            <h4 class="example__money-spent">затраты на питание: 15 000 руб.</h4>
+            <h4 class="example__money-spent">затраты на питание:              15 000 руб.</h4>
           </div>
         </div>
         <div class="example__cat-wrapper">
@@ -114,9 +114,11 @@
     <footer class="page-footer">
       <section class="partnership">
         <div class="partnership__wrapper">
-          <h3 class="partnership__invite"> приглашаем к сотрудничеству дилеров!</h3>
-          <p class="partnership__address">
-            ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+          <h3 class="partnership__invite">приглашаем
+к сотрудничеству дилеров!</h3>
+          <p class="partnership__address">ул. Большая Конюшенная, д. 19/8
+
+Санкт-Петербург
           </p>
         </div>
       </section>
